# daml-dit-if

./: Makefile  README.md  pyproject.toml  pytest.ini
daml_dit_if/api/: __init__.py  common.py
daml_dit_if/main/: __init__.py  auth_accessors.py  auth_handler.py  common.py  config.py  integration_context.py  integration_deferral_queue.py  integration_ledger_context.py  integration_queue_context.py  integration_time_context.py  integration_webhook_context.py  jwt.py  log.py  main.py  package_metadata_introspection.py  util.py  web.py
