[tool.poetry]
name = "daml-dit-if"
version = "0.6.12"
description = "Daml Hub Integration Framework"
authors = ["Mike Schaeffer <mike.schaeffer@digitalasset.com>"]
readme = "README.md"
repository = "https://github.com/digital-asset/daml-dit-if"
keywords = ["daml", "blockchain", "dlt", "distributed ledger", "digital asset"]

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
aiohttp = "*"
dacite = "*"
idna = "^2"
pyyaml = "^5"
dazl = "^7"
daml-dit-api = "0.4.3"
jwcrypto = "1.4"
prometheus-client = "0.15.0"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "^5.4.3"
pytest-asyncio = "*"
pytest-codestyle = "*"
isort = "^5.10.1"
types-PyYAML = "^6.0.3"
types-setuptools = "^57.4.7"
black = "^22.6.0"

[tool.poetry.extras]
develop = []

[tool.isort]
add_imports = ["from __future__ import annotations"]
profile = "black"

[build-system]
requires = ["poetry_core==1.0.0a8"]
build-backend = "poetry.core.masonry.api"
