[tool.poetry]
name = "daml-dit-if"
version = "0.7.0"
description = "Daml Hub Integration Framework"
authors = ["Daml Hub Team <no-reply@digitalasset.com>"]
readme = "README.md"
repository = "https://github.com/digital-asset/daml-dit-if"
keywords = ["daml", "blockchain", "dlt", "distributed ledger", "digital asset"]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
aiohttp = "*"
dacite = "*"
idna = "*"
pyyaml = "*"
dazl = "^7"
daml-dit-api = "^0.4.3"
jwcrypto = "*"
prometheus-client = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-codestyle = "*"
isort = "*"
types-PyYAML = "*"
types-setuptools = "*"
black = "*"

[tool.poetry.extras]
develop = []

[tool.isort]
add_imports = ["from __future__ import annotations"]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
